21 lines , one more to go. . .

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 		<style>
 		/*
-		
+
 			.item {
 				float: left;
 				display: block;
@@ -40,10 +40,10 @@
 		<h1>20 Line Challenge</h1>
 
 		<label>Image File:</label><br/>
-		<input type="file" id="imageLoader" name="imageLoader"/>
-		<canvas id="imageCanvas"></canvas>
+		<input type="file" id="i" name="i"/>
+		<canvas id="c"></canvas>
 
-		<div id="newImage">
+		<div id="MI">
 
 		</div>
 
